Base64 Method 변경